# proximity

./: .gitignore  Cargo.toml  LICENSE  README.md
server/: Cargo.toml
server/src/: main.rs
voice/: Cargo.toml
voice/.cargo/: config.toml
voice/src/: main.rs
